[package]
name = "lucide-leptos"
version = "0.1.0"
edition = "2024"
description = "A Lucide icon library package for Leptos applications"
keywords = ["icons", "lucide", "leptos"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dandelion-huang/lucide-leptos"

[build-dependencies]
heck = "0.5.0"
proc-macro2 = "1.0.93"
quote = "1.0.38"
regex = "1.11.1"
walkdir = "2.5.0"

[dependencies]
leptos = "0.7.5"
