[package]
name = "lucide-leptos"
version = "0.1.0"
edition = "2024"
description = "A Lucide icon library package for Leptos applications"
keywords = ["icons", "lucide", "leptos"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dandelion-huang/lucide-leptos"

[build-dependencies]
heck = "0.5.0"
proc-macro2 = "1.0.93"
quote = "1.0.38"
regex = "1.11.1"
walkdir = "2.5.0"

[dependencies]
leptos = "0.7.5"

[features]
default = []
all = []
hand-helping = []
underline = []
file-plus-2 = []
sigma = []
clock-9 = []
triangle-alert = []
ethernet-port = []
triangle = []
hand = []
search = []
chart-scatter = []
signpost-big = []
volume-2 = []
hand-heart = []
contact = []
beer-off = []
send-horizontal = []
move-down = []
clipboard-plus = []
gamepad-2 = []
lectern = []
lasso = []
eraser = []
chart-line = []
disc-2 = []
receipt = []
bed-single = []
wine = []
briefcase-medical = []
ice-cream-bowl = []
parking-meter = []
file-search = []
arrow-down = []
figma = []
corner-right-up = []
file-key = []
earth = []
laptop-minimal-check = []
chevrons-right = []
beef = []
flashlight = []
file-pen = []
ghost = []
list = []
biceps-flexed = []
cctv = []
volume-off = []
text-cursor-input = []
image-upscale = []
megaphone = []
croissant = []
toy-brick = []
pencil-off = []
route-off = []
message-circle-question = []
square-arrow-right = []
briefcase-business = []
house = []
swiss-franc = []
navigation-2-off = []
bluetooth-off = []
bed = []
panel-right-close = []
signal-low = []
chevrons-down = []
memory-stick = []
clock-arrow-down = []
disc-3 = []
wind = []
corner-up-right = []
clapperboard = []
subscript = []
file-digit = []
arrow-big-down-dash = []
grape = []
flip-vertical = []
hdmi-port = []
target = []
user-cog = []
scissors = []
minimize-2 = []
cog = []
waypoints = []
megaphone-off = []
receipt-pound-sterling = []
crosshair = []
align-vertical-distribute-end = []
pi = []
table-cells-merge = []
square-equal = []
file-sliders = []
package-open = []
vegan = []
airplay = []
gallery-thumbnails = []
clock-8 = []
section = []
message-circle-warning = []
badge-euro = []
repeat = []
circle-user-round = []
square-chevron-right = []
arrow-right-left = []
grip = []
luggage = []
hourglass = []
russian-ruble = []
circle-chevron-right = []
microwave = []
volume-1 = []
party-popper = []
boxes = []
file-heart = []
printer-check = []
reply = []
badge-percent = []
type-outline = []
square-dashed-kanban = []
sunrise = []
toggle-right = []
map-pin-plus-inside = []
bug-off = []
message-square-share = []
beer = []
pointer = []
receipt-indian-rupee = []
chart-bar-stacked = []
sheet = []
spray-can = []
scan-line = []
circle-check-big = []
unfold-vertical = []
chart-candlestick = []
git-pull-request-draft = []
chart-no-axes-column-increasing = []
layout-list = []
umbrella = []
user = []
list-start = []
file-chart-column-increasing = []
lasso-select = []
arrow-big-down = []
iteration-cw = []
fullscreen = []
message-circle-heart = []
sun-dim = []
chart-network = []
replace-all = []
square-arrow-out-down-left = []
cannabis = []
iteration-ccw = []
message-circle-more = []
file-minus = []
square-power = []
square-chevron-up = []
align-horizontal-justify-start = []
copy-plus = []
timer-off = []
folder-check = []
chart-column-decreasing = []
badge-japanese-yen = []
arrow-up-from-line = []
flip-vertical-2 = []
annoyed = []
ligature = []
message-square-warning = []
layout-grid = []
rocking-chair = []
chevrons-up-down = []
badge-minus = []
calendar-off = []
circle = []
air-vent = []
phone-missed = []
scale-3d = []
corner-left-up = []
milk = []
clipboard-pen = []
file-up = []
copyright = []
picture-in-picture = []
vault = []
circle-power = []
omega = []
mailbox = []
gitlab = []
music = []
rectangle-ellipsis = []
smartphone = []
file-symlink = []
alarm-clock-check = []
candy-off = []
circuit-board = []
folder-tree = []
chart-gantt = []
equal = []
grid-2x2-plus = []
recycle = []
arrow-up-left = []
clipboard-type = []
library = []
panel-top-close = []
square-arrow-down = []
list-plus = []
chevron-down = []
backpack = []
calendar-check-2 = []
heading = []
hexagon = []
strikethrough = []
calendar-fold = []
message-square-heart = []
bird = []
bot-message-square = []
sun-medium = []
calendar-arrow-down = []
badge-info = []
shield-plus = []
tickets = []
book-marked = []
creative-commons = []
shirt = []
dock = []
signpost = []
door-closed = []
github = []
fold-horizontal = []
nfc = []
clipboard-paste = []
cone = []
cooking-pot = []
proportions = []
bring-to-front = []
usb = []
separator-vertical = []
hard-hat = []
cake-slice = []
sun-moon = []
ticket = []
calendar-plus-2 = []
case-lower = []
layout-template = []
panel-right-open = []
brackets = []
star-off = []
shrink = []
church = []
circle-percent = []
crop = []
flask-round = []
cookie = []
chart-column-big = []
redo-2 = []
circle-slash-2 = []
calendar-1 = []
tag = []
book-check = []
octagon-pause = []
cup-soda = []
option = []
sparkle = []
briefcase = []
circle-chevron-down = []
presentation = []
square-sigma = []
rotate-cw = []
file-audio = []
ellipsis-vertical = []
badge-plus = []
screen-share-off = []
square-play = []
align-horizontal-distribute-end = []
file-clock = []
calendar-search = []
image-down = []
swatch-book = []
radius = []
folder-sync = []
panels-top-left = []
headset = []
circle-equal = []
dessert = []
carrot = []
receipt-euro = []
map = []
check-check = []
inbox = []
circle-alert = []
tv-minimal = []
align-justify = []
power = []
a-large-small = []
tent-tree = []
database = []
tickets-plane = []
captions = []
martini = []
arrow-up-to-line = []
monitor-down = []
badge-indian-rupee = []
camera-off = []
fuel = []
satellite-dish = []
bike = []
chart-no-axes-column = []
swords = []
message-square-off = []
scan-text = []
arrow-down-z-a = []
rat = []
tornado = []
toggle-left = []
file = []
puzzle = []
align-vertical-distribute-center = []
signal = []
egg-off = []
arrow-up-1-0 = []
file-audio-2 = []
baseline = []
vibrate-off = []
glass-water = []
brain = []
files = []
torus = []
scan-search = []
square-dashed-bottom-code = []
message-circle = []
message-square-dot = []
receipt-japanese-yen = []
voicemail = []
octagon-minus = []
messages-square = []
ship-wheel = []
message-square-quote = []
contrast = []
cuboid = []
alarm-clock-plus = []
monitor-pause = []
file-video-2 = []
archive-x = []
terminal = []
move-diagonal = []
droplet-off = []
file-scan = []
arrow-up-wide-narrow = []
move = []
maximize = []
between-vertical-start = []
laptop-minimal = []
radar = []
logs = []
sparkles = []
lock-keyhole = []
octagon-x = []
scan-heart = []
folder-root = []
chevron-up = []
circle-help = []
square-percent = []
haze = []
folder-output = []
folder-symlink = []
file-badge-2 = []
vibrate = []
laugh = []
scan-eye = []
spade = []
cloud-rain-wind = []
sliders-vertical = []
undo-2 = []
file-video = []
step-back = []
flask-conical-off = []
arrow-down-left = []
list-filter-plus = []
file-text = []
file-stack = []
folder-open = []
package-minus = []
droplet = []
whole-word = []
paint-roller = []
zap-off = []
square-kanban = []
keyboard = []
x = []
chevrons-right-left = []
joystick = []
cigarette = []
bath = []
qr-code = []
dot = []
ice-cream-cone = []
languages = []
ampersands = []
amphora = []
arrow-left-from-line = []
bell-minus = []
file-cog = []
wheat = []
eye-closed = []
cable-car = []
arrow-up-narrow-wide = []
lock = []
dice-2 = []
log-in = []
squircle = []
cloud-upload = []
shield-ellipsis = []
ban = []
smartphone-nfc = []
list-video = []
text-select = []
shopping-bag = []
divide = []
piggy-bank = []
battery-warning = []
wallet-minimal = []
circle-dollar-sign = []
milk-off = []
square-parking = []
refresh-ccw-dot = []
tally-2 = []
shell = []
repeat-2 = []
pilcrow = []
circle-dot-dashed = []
mail-question = []
cloud-drizzle = []
copy-minus = []
spline = []
refresh-cw = []
pen = []
user-pen = []
plane = []
align-vertical-space-between = []
chevron-right = []
tally-3 = []
clipboard = []
equal-not = []
package = []
instagram = []
mail-warning = []
euro = []
link = []
square-chevron-left = []
globe-lock = []
dice-3 = []
hand-platter = []
video-off = []
user-round-plus = []
key = []
square-activity = []
shrub = []
sailboat = []
file-x-2 = []
square-slash = []
brain-cog = []
meh = []
sliders-horizontal = []
door-open = []
corner-down-right = []
beaker = []
list-todo = []
cloud-sun = []
arrow-right = []
store = []
antenna = []
chevron-first = []
wheat-off = []
aperture = []
calendar-plus = []
brush = []
thermometer-snowflake = []
clover = []
concierge-bell = []
log-out = []
unfold-horizontal = []
file-spreadsheet = []
square-radical = []
circle-play = []
square-arrow-up = []
file-code-2 = []
telescope = []
ship = []
ear-off = []
worm = []
wallpaper = []
ambulance = []
space = []
file-input = []
book-dashed = []
stretch-vertical = []
calendar-check = []
diff = []
shower-head = []
square-pen = []
arrow-down-up = []
git-pull-request = []
minimize = []
group = []
settings = []
cloud-snow = []
notepad-text-dashed = []
calendar-x-2 = []
cassette-tape = []
thumbs-down = []
dice-1 = []
move-down-left = []
vote = []
bot-off = []
type = []
square-dashed-mouse-pointer = []
square-menu = []
mouse-pointer-click = []
regex = []
square-check-big = []
loader-circle = []
popsicle = []
lamp-floor = []
utensils = []
map-pin-minus = []
archive = []
bean = []
panels-right-bottom = []
equal-approximately = []
message-square-text = []
refresh-cw-off = []
phone-outgoing = []
tally-1 = []
arrow-up-from-dot = []
candy = []
pocket = []
repeat-1 = []
magnet = []
circle-parking = []
mail = []
school = []
chart-spline = []
arrow-big-right = []
shield = []
download = []
kanban = []
file-volume = []
expand = []
gallery-vertical-end = []
file-warning = []
disc-album = []
pin = []
arrow-up-a-z = []
bandage = []
square-check = []
import = []
webcam = []
phone-forwarded = []
bell-plus = []
square-dot = []
corner-right-down = []
square-divide = []
book-open = []
forklift = []
calendar-cog = []
castle = []
orbit = []
parentheses = []
projector = []
pilcrow-right = []
server = []
user-round-check = []
bolt = []
tv = []
message-square-dashed = []
droplets = []
skip-forward = []
archive-restore = []
volume = []
lamp-wall-up = []
drumstick = []
user-plus = []
wifi-zero = []
battery-medium = []
book-a = []
battery-charging = []
shapes = []
folders = []
satellite = []
list-minus = []
circle-arrow-left = []
bookmark-minus = []
heater = []
layers = []
earth-lock = []
square-parking-off = []
dna = []
mouse-off = []
file-check-2 = []
slash = []
radio = []
align-center-vertical = []
alarm-clock = []
alarm-clock-off = []
book = []
keyboard-music = []
hotel = []
book-text = []
variable = []
touchpad-off = []
bitcoin = []
message-square-x = []
car-front = []
alarm-smoke = []
dice-4 = []
skull = []
mail-minus = []
bot = []
plug = []
shield-x = []
train-track = []
goal = []
square-chart-gantt = []
file-chart-column = []
folder-archive = []
signal-high = []
user-minus = []
plane-landing = []
wallet = []
circle-check = []
tally-4 = []
file-image = []
square-dashed-bottom = []
panel-top-open = []
bell = []
git-branch = []
square-m = []
coffee = []
panel-left-dashed = []
code = []
rail-symbol = []
circle-divide = []
cake = []
spell-check-2 = []
settings-2 = []
tally-5 = []
chart-bar-decreasing = []
message-circle-dashed = []
cloud-moon-rain = []
radio-tower = []
thermometer = []
cast = []
milestone = []
move-3d = []
flag = []
podcast = []
tv-minimal-play = []
git-fork = []
eye-off = []
dice-5 = []
tram-front = []
battery = []
blinds = []
arrow-left-to-line = []
newspaper = []
clipboard-pen-line = []
snowflake = []
disc = []
step-forward = []
bomb = []
piano = []
book-copy = []
map-pin-plus = []
arrow-up-0-1 = []
database-zap = []
rotate-3d = []
star-half = []
switch-camera = []
image-plus = []
pencil-ruler = []
container = []
ruler = []
turtle = []
frown = []
tree-pine = []
audio-lines = []
circle-slash = []
notebook-text = []
layout-dashboard = []
cpu = []
align-end-horizontal = []
flame-kindling = []
cloud-alert = []
clipboard-list = []
biohazard = []
letter-text = []
folder-x = []
book-open-check = []
list-ordered = []
factory = []
bold = []
tablets = []
wifi-low = []
fence = []
trophy = []
scan-qr-code = []
hash = []
shield-minus = []
link-2-off = []
dam = []
share-2 = []
battery-full = []
plus = []
monitor-stop = []
panel-bottom = []
clipboard-minus = []
check = []
align-vertical-justify-end = []
rabbit = []
plug-zap = []
nut = []
mail-plus = []
move-down-right = []
rotate-ccw = []
heart-crack = []
flip-horizontal-2 = []
hard-drive = []
between-horizontal-end = []
tent = []
trending-up-down = []
hard-drive-download = []
circle-fading-plus = []
pen-line = []
align-vertical-space-around = []
hospital = []
case-sensitive = []
focus = []
bluetooth = []
align-end-vertical = []
square-split-vertical = []
headphones = []
map-pin-x = []
table-properties = []
git-pull-request-create-arrow = []
folder-git-2 = []
square-x = []
square-asterisk = []
rss = []
table-cells-split = []
flower-2 = []
landmark = []
wifi = []
corner-up-left = []
file-archive = []
square-arrow-up-left = []
arrow-down-from-line = []
watch = []
square-arrow-down-right = []
scale = []
dice-6 = []
message-square-more = []
ampersand = []
dna-off = []
square-arrow-out-up-right = []
hand-coins = []
roller-coaster = []
monitor-smartphone = []
git-commit-vertical = []
info = []
blocks = []
popcorn = []
file-badge = []
badge-dollar-sign = []
user-x = []
navigation-off = []
key-square = []
ticket-minus = []
dog = []
layout-panel-left = []
fan = []
radio-receiver = []
loader = []
palette = []
pilcrow-left = []
diamond-plus = []
circle-arrow-out-down-left = []
receipt-swiss-franc = []
package-2 = []
chart-no-axes-combined = []
case-upper = []
volleyball = []
refresh-ccw = []
cloud-fog = []
git-branch-plus = []
file-x = []
heading-1 = []
hop = []
folder-up = []
soup = []
folder-plus = []
badge-russian-ruble = []
git-merge = []
japanese-yen = []
grip-horizontal = []
list-x = []
shield-half = []
mic = []
venetian-mask = []
rainbow = []
git-pull-request-arrow = []
copy = []
smile-plus = []
fish = []
move-up-left = []
list-tree = []
zoom-in = []
circle-chevron-up = []
circle-arrow-out-down-right = []
search-check = []
signature = []
arrow-down-to-line = []
battery-plus = []
glasses = []
coins = []
align-start-vertical = []
arrows-up-from-line = []
snail = []
library-big = []
bookmark-x = []
book-key = []
panel-left = []
test-tube-diagonal = []
origami = []
square-library = []
message-circle-off = []
square-user-round = []
wand-sparkles = []
file-type-2 = []
text-quote = []
caravan = []
badge-cent = []
panel-top-dashed = []
notebook-tabs = []
text = []
test-tubes = []
fire-extinguisher = []
egg-fried = []
flag-triangle-left = []
align-right = []
text-cursor = []
image = []
panel-bottom-open = []
maximize-2 = []
lightbulb = []
server-off = []
arrow-big-left-dash = []
image-play = []
sunset = []
save = []
smile = []
search-code = []
lamp = []
siren = []
images = []
scan = []
navigation = []
cloud-lightning = []
user-round-pen = []
citrus = []
message-square-diff = []
bell-electric = []
ham = []
square-square = []
monitor-play = []
badge-pound-sterling = []
hard-drive-upload = []
app-window = []
badge = []
theater = []
paperclip = []
heading-2 = []
square-scissors = []
fast-forward = []
flag-triangle-right = []
calendar-range = []
contact-round = []
syringe = []
search-slash = []
file-question = []
sticker = []
award = []
panel-right-dashed = []
zoom-out = []
square-arrow-out-up-left = []
box = []
thumbs-up = []
superscript = []
ticket-percent = []
battery-low = []
touchpad = []
speech = []
percent = []
square-chevron-down = []
square = []
crown = []
bluetooth-searching = []
timer-reset = []
stethoscope = []
eclipse = []
donut = []
candy-cane = []
play = []
folder-heart = []
pen-off = []
file-check = []
leafy-green = []
tangent = []
book-audio = []
table = []
split = []
send = []
barcode = []
videotape = []
scroll = []
phone-call = []
columns-4 = []
baggage-claim = []
message-square-lock = []
circle-arrow-out-up-right = []
radiation = []
speaker = []
user-round-search = []
undo-dot = []
facebook = []
codesandbox = []
file-down = []
badge-check = []
baby = []
smartphone-charging = []
book-plus = []
unplug = []
heading-3 = []
folder-code = []
bluetooth-connected = []
table-of-contents = []
camera = []
link-2 = []
printer = []
list-collapse = []
workflow = []
trees = []
panel-left-close = []
git-graph = []
redo = []
captions-off = []
club = []
folder-minus = []
move-diagonal-2 = []
combine = []
arrow-up-right = []
truck = []
layout-panel-top = []
life-buoy = []
user-search = []
square-user = []
table-columns-split = []
between-horizontal-start = []
pickaxe = []
map-pin-x-inside = []
package-x = []
pen-tool = []
alarm-clock-minus = []
panels-left-bottom = []
circle-gauge = []
folder-cog = []
at-sign = []
rotate-ccw-square = []
circle-arrow-right = []
shield-alert = []
map-pin-off = []
list-restart = []
house-wifi = []
hand-metal = []
egg = []
car-taxi-front = []
square-mouse-pointer = []
monitor-x = []
square-terminal = []
grid-2x2-check = []
bus = []
file-pen-line = []
book-heart = []
infinity = []
gem = []
filter-x = []
git-compare = []
receipt-cent = []
feather = []
webhook-off = []
trash = []
monitor-cog = []
tree-palm = []
chart-bar = []
arrow-down-1-0 = []
database-backup = []
armchair = []
wifi-off = []
user-round = []
ungroup = []
toilet = []
book-lock = []
leaf = []
arrow-down-wide-narrow = []
network = []
file-lock-2 = []
app-window-mac = []
arrow-up-z-a = []
scan-barcode = []
house-plus = []
corner-left-down = []
map-pin-minus-inside = []
message-square-plus = []
folder-clock = []
map-pin-house = []
paintbrush-vertical = []
dollar-sign = []
triangle-right = []
indian-rupee = []
construction = []
circle-plus = []
graduation-cap = []
scan-face = []
fish-symbol = []
monitor-speaker = []
guitar = []
star = []
lock-keyhole-open = []
monitor-check = []
sandwich = []
chef-hat = []
heading-6 = []
cloud-off = []
save-all = []
file-user = []
sun = []
wrench = []
signal-medium = []
grab = []
pyramid = []
book-minus = []
gauge = []
chart-column = []
message-square = []
bug-play = []
book-x = []
heading-4 = []
chart-column-increasing = []
pizza = []
unlink = []
philippine-peso = []
chevrons-down-up = []
bone = []
flashlight-off = []
file-json-2 = []
anchor = []
hammer = []
chevrons-left-right-ellipsis = []
plug-2 = []
notebook-pen = []
chevrons-up = []
columns-3 = []
move-horizontal = []
highlighter = []
square-arrow-up-right = []
tablet-smartphone = []
circle-stop = []
twitch = []
chart-no-axes-column-decreasing = []
chart-pie = []
banana = []
tree-deciduous = []
folder-lock = []
locate = []
list-music = []
bug = []
panel-top = []
message-square-code = []
mail-open = []
youtube = []
file-chart-line = []
chevrons-left-right = []
bookmark-plus = []
a-arrow-up = []
tower-control = []
book-up = []
pocket-knife = []
shovel = []
compass = []
file-minus-2 = []
align-horizontal-justify-end = []
server-crash = []
traffic-cone = []
triangle-dashed = []
plane-takeoff = []
house-plug = []
folder-kanban = []
mail-search = []
image-up = []
cloud-moon = []
columns-2 = []
warehouse = []
calendar-arrow-up = []
rotate-cw-square = []
square-function = []
frame = []
credit-card = []
circle-arrow-down = []
table-2 = []
file-key-2 = []
copyleft = []
grid-3x3 = []
ticket-x = []
align-vertical-justify-start = []
heart-off = []
cylinder = []
computer = []
book-type = []
pill-bottle = []
heading-5 = []
thermometer-sun = []
badge-help = []
locate-off = []
reply-all = []
pencil = []
cloud-rain = []
send-to-back = []
git-pull-request-closed = []
arrow-big-right-dash = []
wind-arrow-down = []
align-vertical-distribute-start = []
book-down = []
pound-sterling = []
monitor-up = []
bean-off = []
trash-2 = []
circle-user = []
skip-back = []
file-plus = []
scroll-text = []
diamond = []
delete = []
command = []
package-check = []
align-center-horizontal = []
clock = []
bell-ring = []
remove-formatting = []
router = []
footprints = []
octagon = []
arrow-big-left = []
table-rows-split = []
phone = []
circle-x = []
land-plot = []
align-horizontal-justify-center = []
sun-snow = []
chart-bar-increasing = []
image-off = []
clock-alert = []
umbrella-off = []
arrow-down-a-z = []
panel-left-open = []
brain-circuit = []
move-vertical = []
users-round = []
salad = []
dumbbell = []
tractor = []
waves = []
folder-closed = []
eye = []
user-round-cog = []
indent-increase = []
mouse-pointer-ban = []
headphone-off = []
badge-alert = []
server-cog = []
pipette = []
phone-off = []
flower = []
banknote = []
sprout = []
brick-wall = []
copy-check = []
rectangle-vertical = []
pill = []
codepen = []
dribbble = []
chart-bar-big = []
message-circle-plus = []
axe = []
square-plus = []
gift = []
receipt-russian-ruble = []
package-plus = []
external-link = []
currency = []
wand = []
file-music = []
car = []
zap = []
trello = []
list-checks = []
message-square-reply = []
badge-x = []
building-2 = []
chart-no-axes-gantt = []
moon-star = []
clock-1 = []
cigarette-off = []
binary = []
chevron-last = []
pointer-off = []
mouse-pointer-2 = []
package-search = []
mic-off = []
lamp-desk = []
share = []
circle-parking-off = []
tags = []
square-bottom-dashed-scissors = []
album = []
key-round = []
square-code = []
folder-search-2 = []
arrow-up = []
circle-arrow-out-up-left = []
wifi-high = []
microscope = []
test-tube = []
bell-off = []
linkedin = []
arrow-down-narrow-wide = []
clock-3 = []
panel-right = []
drum = []
view = []
music-2 = []
wrap-text = []
git-compare-arrows = []
calendar-minus = []
book-image = []
file-volume-2 = []
user-round-x = []
undo = []
video = []
circle-ellipsis = []
id-card = []
activity = []
pencil-line = []
person-standing = []
twitter = []
map-pin = []
folder-input = []
filter = []
clock-arrow-up = []
lightbulb-off = []
phone-incoming = []
refrigerator = []
italic = []
list-end = []
handshake = []
map-pin-check = []
chevrons-left = []
rows-2 = []
mail-x = []
medal = []
message-circle-code = []
calendar = []
inspection-panel = []
notepad-text = []
message-circle-x = []
arrow-right-from-line = []
globe = []
arrow-left = []
paintbrush = []
rows-3 = []
align-center = []
badge-swiss-franc = []
cross = []
square-minus = []
university = []
route = []
circle-arrow-up = []
diameter = []
pc-case = []
ellipsis = []
calendar-heart = []
book-headphones = []
microchip = []
arrow-down-right = []
file-box = []
paw-print = []
laptop = []
power-off = []
redo-dot = []
axis-3d = []
chart-area = []
arrow-big-up = []
framer = []
keyboard-off = []
map-plus = []
mountain = []
stretch-horizontal = []
bell-dot = []
clipboard-x = []
folder-down = []
shield-question = []
panel-bottom-dashed = []
volume-x = []
music-3 = []
copy-slash = []
file-code = []
save-off = []
move-left = []
slack = []
circle-dashed = []
clock-2 = []
user-round-minus = []
scissors-line-dashed = []
file-output = []
cloud = []
hop-off = []
clock-11 = []
shuffle = []
quote = []
anvil = []
washing-machine = []
grip-vertical = []
clock-6 = []
drill = []
align-horizontal-distribute-start = []
list-check = []
file-type = []
rewind = []
wine-off = []
circle-fading-arrow-up = []
upload = []
trending-down = []
bookmark-check = []
fold-vertical = []
calendar-x = []
pause = []
radical = []
arrow-big-up-dash = []
folder-key = []
grid-2x2 = []
cloud-hail = []
search-x = []
cloudy = []
replace = []
forward = []
mountain-snow = []
indent-decrease = []
circle-minus = []
dices = []
blend = []
bookmark = []
braces = []
rocket = []
circle-dot = []
move-right = []
drama = []
asterisk = []
user-check = []
calendar-clock = []
fish-off = []
folder-search = []
folder-pen = []
cloud-sun-rain = []
file-chart-pie = []
git-pull-request-create = []
tablet = []
mail-check = []
align-vertical-justify-center = []
file-diff = []
monitor-dot = []
ticket-slash = []
align-horizontal-space-between = []
webhook = []
briefcase-conveyor-belt = []
diamond-percent = []
folder-open-dot = []
arrow-left-right = []
code-xml = []
cloud-download = []
utility-pole = []
square-dashed = []
signal-zero = []
book-up-2 = []
monitor-off = []
ear = []
spell-check = []
file-terminal = []
flame = []
gallery-horizontal-end = []
nut-off = []
component = []
circle-off = []
file-search-2 = []
align-start-horizontal = []
locate-fixed = []
lock-open = []
loader-pinwheel = []
atom = []
cat = []
cloud-cog = []
sword = []
square-pilcrow = []
squirrel = []
menu = []
pin-off = []
lamp-ceiling = []
folder-dot = []
utensils-crossed = []
ratio = []
square-arrow-down-left = []
grid-2x2-x = []
octagon-alert = []
gallery-vertical = []
image-minus = []
clock-7 = []
arrow-right-to-line = []
a-arrow-down = []
merge = []
map-pinned = []
square-pi = []
align-horizontal-space-around = []
chrome = []
sticky-note = []
ticket-plus = []
shopping-cart = []
copy-x = []
calculator = []
clock-10 = []
train-front-tunnel = []
clock-12 = []
apple = []
circle-chevron-left = []
mouse = []
flask-conical = []
picture-in-picture-2 = []
pentagon = []
diamond-minus = []
waves-ladder = []
shield-check = []
arrow-down-0-1 = []
message-circle-reply = []
circle-pause = []
mails = []
clock-5 = []
rectangle-horizontal = []
shopping-basket = []
list-filter = []
receipt-text = []
music-4 = []
book-user = []
shield-ban = []
arrow-down-to-dot = []
building = []
clipboard-copy = []
binoculars = []
angry = []
lollipop = []
between-vertical-end = []
history = []
gavel = []
folder = []
drafting-compass = []
align-horizontal-distribute-center = []
file-lock = []
layers-2 = []
users = []
chart-column-stacked = []
boom-box = []
slice = []
folder-git = []
fingerprint = []
flag-off = []
mic-vocal = []
corner-down-left = []
file-axis-3d = []
book-open-text = []
timer = []
gamepad = []
git-commit-horizontal = []
monitor = []
clipboard-check = []
unlink-2 = []
square-arrow-out-down-right = []
minus = []
heart-pulse = []
rows-4 = []
heart-handshake = []
bed-double = []
text-search = []
audio-waveform = []
navigation-2 = []
paint-bucket = []
chevron-left = []
move-up = []
film = []
moon = []
square-arrow-left = []
panel-bottom-close = []
weight = []
shield-off = []
scaling = []
cable = []
accessibility = []
move-up-right = []
wallet-cards = []
calendar-sync = []
bus-front = []
lamp-wall-down = []
mouse-pointer = []
file-json = []
train-front = []
calendar-minus-2 = []
ribbon = []
square-stack = []
flip-horizontal = []
map-pin-check-inside = []
gallery-horizontal = []
notebook = []
stamp = []
square-split-horizontal = []
arrow-up-down = []
screen-share = []
calendar-days = []
align-left = []
separator-horizontal = []
ferris-wheel = []
sofa = []
clock-4 = []
ticket-check = []
cherry = []
heart = []
trending-up = []
